--- a/Initiatives.html
+++ b/Initiatives.html
@@ -306,10 +306,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-6">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/teestories2.jpeg" alt="Img">
+                                <img src="assets/images/portfolio/teestories.jpg" alt="Img">
                                 <a href="Event - Teestories3.0.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
@@ -836,7 +836,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            
                 <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-7 cat-5">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
@@ -853,24 +853,24 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-7 cat-5">
-                <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
-                    <div class="img-holder">
-                        <img src="assets/images/portfolio/teestories.jpg" alt="Img">
-                        <a href="Event - Teestories1.0.html" class="portfolio-hover ">
-                            <div class="hover-content">
-                                <i class="far fa-external-link"></i>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="text">
-                        <h3 class="title"><a href="Event - Teestories1.0.html">Tee Stories 1.0</a></h3>
-                        <a class="cat-link">04/02/2020</a>
-                    </div>
+            
+        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-7 cat-5">
+            <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
+                <div class="img-holder">
+                    <img src="assets/images/portfolio/teestories1.0.jpeg" alt="Img">
+                    <a href="Event - Teestories1.0.html" class="portfolio-hover ">
+                        <div class="hover-content">
+                            <i class="far fa-external-link"></i>
+                        </div>
+                    </a>
+                </div>
+                <div class="text">
+                    <h3 class="title"><a href="Event - Teestories1.0.html">Tee Stories 1.0</a></h3>
+                    <a class="cat-link">04/02/2020</a>
                 </div>
             </div>
         </div>
+    </div>
         </section><!--====== End Portfolio Section ======-->
         <!--====== Start Footer ======-->
        <footer class="footer-area page-footer light-gray-bg">
