--- a/Event - Teestories1.0.html
+++ b/Event - Teestories1.0.html
@@ -145,6 +145,7 @@
                             <div class="text-wrapper mb-50 wow fadeInRight">
                                 <div class="text">
                                     <h3 class="title">Tee Stories 1.0</h3>
+                                    <p class="position">04 February 2020</p>
                                     <p  align="justify">Tee Stories is a remarkable event organized by YUVA, REC. The primary objective of Tee
                                         Stories is to extend support and bring smiles to those brave individuals fighting cancer.
                                         During the event, the public is invited to paint on white tee shirts, turning them into
