--- a/Event - Teestories2.0.html
+++ b/Event - Teestories2.0.html
@@ -145,6 +145,7 @@
                             <div class="text-wrapper mb-50 wow fadeInRight">
                                 <div class="text">
                                     <h3 class="title">Tee Stories 2.0</h3>
+                                    <p class="position">13 February 2021</p>
                                     <p  align="justify">Building on the success of Tee Stories 1.0, Tee Stories 2.0 continued the tradition of
                                         spreading love and support to individuals battling cancer. Organized by YUVA, REC, this
                                         event has become a benchmark in our annual calendar. For the past three years, Tee Stories
