--- a/Event - Teestories3.0.html
+++ b/Event - Teestories3.0.html
@@ -145,6 +145,7 @@
                             <div class="text-wrapper mb-50 wow fadeInRight">
                                 <div class="text">
                                     <h3 class="title">Tee Stories 3.0</h3>
+                                    <p class="position">12 June 2023</p>
                                     <p  align="justify">Tee stories has been successfully conducted for the past three years, making it our
                                         benchmark event.
                                         Held at Ramachandra University, Tee Stories 3.0 marked a significant milestone in our
