--- a/index.html
+++ b/index.html
@@ -401,6 +401,22 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/teestories.jpg" alt="Img">
+                                <a href="Event - Teestories3.0.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Teestories3.0.html">Tee Stories 3.0</a></h3>
+                                <a class="cat-link">12/06/2023</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-6">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                             <div class="img-holder">
@@ -690,22 +706,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-10 cat-5">
-                    <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
-                        <div class="img-holder">
-                            <img src="assets/images/portfolio/teestories.jpg" alt="Img">
-                            <a href="Event - Teestories.html" class="portfolio-hover ">
-                                <div class="hover-content">
-                                    <i class="far fa-external-link"></i>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="text">
-                            <h3 class="title"><a href="Event - Teestories.html">Tee Stories 3.0</a></h3>
-                            <a class="cat-link">03/04/2022</a>
-                        </div>
-                    </div>
-                </div>
+                
                 <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
@@ -917,6 +918,22 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-7 cat-5">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
+                            <img src="assets/images/portfolio/teestories3.0.jpeg" alt="Img">
+                            <a href="Event - Teestories2.0.html" class="portfolio-hover ">
+                                <div class="hover-content">
+                                    <i class="far fa-external-link"></i>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="text">
+                            <h3 class="title"><a href="Event - Teestories2.0.html">Tee Stories 2.0</a></h3>
+                            <a class="cat-link">13/02/2021</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-7 cat-5">
+                    <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
+                        <div class="img-holder">
                             <img src="assets/images/portfolio/ascensions.png" alt="Img">
                             <a href="Event - Ascensions.html" class="portfolio-hover ">
                                 <div class="hover-content">
@@ -927,6 +944,22 @@
                         <div class="text">
                             <h3 class="title"><a href="Event - Ascensions.html">Ascensions</a></h3>
                             <a class="cat-link">25/10/2020</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-7 cat-5">
+                    <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
+                        <div class="img-holder">
+                            <img src="assets/images/portfolio/teestories1.0.jpeg" alt="Img">
+                            <a href="Event - Teestories1.0.html" class="portfolio-hover ">
+                                <div class="hover-content">
+                                    <i class="far fa-external-link"></i>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="text">
+                            <h3 class="title"><a href="Event - Teestories1.0.html">Tee Stories 1.0</a></h3>
+                            <a class="cat-link">04/02/2020</a>
                         </div>
                     </div>
                 </div>
