--- a/Achievements and recognitions.html
+++ b/Achievements and recognitions.html
@@ -129,7 +129,33 @@
         </section>
         <!--====== End Page-banner section ======-->
         <!--====== Start Team Details Section ======-->
-        <section class="team-details-section pt-100 pb-90 position-relative z-1">
+        <section class="team-details-section pt-50 pb-90 position-relative z-1">
+            <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-7.png" alt=""></span></div>
+            <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-8.png" alt=""></span></div>
+            <div class="container">
+                
+                <div class="team-details-wrapper">
+                    <div class="row align-items-center">
+                        <div class="col-lg-6">
+                            <div class="img-holder mb-50 position-relative z-1 wow fadeInLeft">
+                                <img src="assets/images/Achievements/Communique.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="text-wrapper mb-50 wow fadeInRight">
+                                <div class="text">
+                                    <h3 class="title">Communiquè 2023</h3>
+                                    <p class="position">2023</p>
+                                    <p align="justify">The Road Safety Communiqué is a testament to our unwavering commitment to safer roads. Crafted with precision and dedication, this document serves as a comprehensive guide, advocating for responsible behaviour on our thoroughfares. This document was proudly presented to General (Dr) V.K. Singh, PVSM, AVSM, YSM (Retd.), Hon'ble Minister of State for Road Transport & Highways & Civil Aviation, Gol at the first edition of the Yi National Road Summit 2023. The collaborative effort of talented individuals shaped its inception; Thrisha led the entire process and took charge of the design, playing a pivotal role in bringing the Road Safety Communiqué to fruition, Jeciyazhini lent her design expertise, ensuring visual clarity and impact. Shreeya and Ramya poured their knowledge and creativity into the content, ensuring its informative and persuasive nature. Steering this initiative with wisdom and expertise, Mogesh, Chair of Road Safety Yuva, provided invaluable guidance and oversight, ensuring the project's seamless execution. Together, this team has created a document that not only informs but inspires, underscoring our shared mission for a safer, more secure future on the roads.</p>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="team-details-section pt-50 pb-90 position-relative z-1">
             <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-7.png" alt=""></span></div>
             <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-8.png" alt=""></span></div>
             <div class="container">
@@ -156,7 +182,7 @@
                 </div>
             </div>
         </section>
-        <section class="team-details-section pt-100 pb-90 position-relative z-1">
+        <section class="team-details-section pt-50 pb-90 position-relative z-1">
             <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-7.png" alt=""></span></div>
             <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-8.png" alt=""></span></div>
             <div class="container">
@@ -183,7 +209,7 @@
                 </div>
             </div>
         </section>
-        <section class="team-details-section pt-100 pb-90 position-relative z-1">
+        <section class="team-details-section pt-50 pb-90 position-relative z-1">
             <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-7.png" alt=""></span></div>
             <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-8.png" alt=""></span></div>
             <div class="container">
@@ -209,7 +235,7 @@
                 </div>
             </div>
         </section>
-        <section class="team-details-section pt-100 pb-90 position-relative z-1">
+        <section class="team-details-section pt-50 pb-90 position-relative z-1">
             <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-7.png" alt=""></span></div>
             <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-8.png" alt=""></span></div>
             <div class="container">
