--- a/Event - Chennai got talent 3.0.html
+++ b/Event - Chennai got talent 3.0.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!--====== Title ======-->
-        <title>YUVA REC Chennai Got Talent 4.0</title>
+        <title>YUVA REC Chennai Got Talent 3.0</title>
         <!--====== Favicon Icon ======-->
         <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/png">
         <!--====== Default css ======-->
@@ -144,7 +144,7 @@
                         <div class="col-lg-6">
                             <div class="text-wrapper mb-50 wow fadeInRight">
                                 <div class="text">
-                                    <h3 class="title">Chennai Got Talent</h3>
+                                    <h3 class="title">Chennai Got Talent 3.0</h3>
                                     <p class="position">16 August 2022</p>
                                     <p align="justify">Chennai Got Talent was an extraordinary event that showcased a multitude of inspiring competitions, providing opportunities for individuals from diverse backgrounds, ages, and abilities to showcase their unique talents. The event featured captivating competitions such as dance, fashion with recycled goods, and art forms like sand art, igniting creativity and innovation among participants. It celebrated the rich diversity of talent in Chennai and offered a platform for individuals to shine, regardless of their circumstances. The event created an inclusive environment, embracing talents from all walks of life and breaking barriers. "Chennai Got Talent" served as a source of inspiration, bringing together a vibrant community of performers, artists, and visionaries, leaving a profound impact on the audience and participants alike.</p>
                                     
