--- a/Event - Yi Chennai Annual Day.html
+++ b/Event - Yi Chennai Annual Day.html
@@ -291,7 +291,7 @@
                                         <img src="assets/images/portfolio/akshayapatra.jpg" alt="Img"></a>
                                     </div>
                                     <div class="text">
-                                        <h4><a href="Event - Akshaya Patra23 .html">Akshaya Patra</a></h4>
+                                        <h4><a href="Event - Akshaya Patra23 .html">Akshaya Patra 2.0</a></h4>
                                         <p>November 2022</p>
                                     </div>
                                 </div>
