--- a/index.html
+++ b/index.html
@@ -437,14 +437,14 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".3s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/pawsitivity.jpg" alt="Img">
-                                <a href="Event - Pawsitivity.html" class="portfolio-hover">
+                                <a href="Event - Pawsitivity2.0.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Pawsitivity.html">Pawsitivity 2.0</a></h3>
+                                <h3 class="title"><a href="Event - Pawsitivity2.0.html">Pawsitivity 2.0</a></h3>
                                 <a class="cat-link">30/04/2023</a>
                             </div>
                         </div>
@@ -662,14 +662,14 @@
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/pawsitivity 1.0.jpg" alt="Img">
-                            <a href="Event - Pawsitivity.html" class="portfolio-hover ">
+                            <a href="Event - Pawsitivity1.0.html" class="portfolio-hover ">
                                 <div class="hover-content">
                                     <i class="far fa-external-link"></i>
                                 </div>
                             </a>
                         </div>
                         <div class="text">
-                            <h3 class="title"><a href="Event - Pawsitivity.html">Pawsitivity 1.0</a></h3>
+                            <h3 class="title"><a href="Event - Pawsitivity1.0.html">Pawsitivity 1.0</a></h3>
                             <a class="cat-link">15/05/2022</a>
                         </div>
                     </div>
@@ -706,23 +706,6 @@
                         </div>
                     </div>
                 </div>
-                
-                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5">
-                    <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
-                        <div class="img-holder">
-                            <img src="assets/images/portfolio/pavithram.jpg" alt="Img">
-                            <a href="Event - Pavithram.html" class="portfolio-hover ">
-                                <div class="hover-content">
-                                    <i class="far fa-external-link"></i>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="text">
-                            <h3 class="title"><a href="Event - Pavithram.html">Pavithram</a></h3>
-                            <a class="cat-link">14/03/2022</a>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-6 cat-9">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
@@ -736,6 +719,22 @@
                         <div class="text">
                             <h3 class="title"><a href="Event - Walk for water.html">Walk For Water - Walkathon</a></h3>
                             <a class="cat-link">20/03/2022</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5">
+                    <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
+                        <div class="img-holder">
+                            <img src="assets/images/portfolio/pavithram.jpg" alt="Img">
+                            <a href="Event - Pavithram.html" class="portfolio-hover ">
+                                <div class="hover-content">
+                                    <i class="far fa-external-link"></i>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="text">
+                            <h3 class="title"><a href="Event - Pavithram.html">Pavithram</a></h3>
+                            <a class="cat-link">14/03/2022</a>
                         </div>
                     </div>
                 </div>
@@ -758,15 +757,15 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
-                            <img src="assets/images/portfolio/voicingthewhispers.jpg" alt="Img">
-                            <a href="Event - Voicing the whispers.html" class="portfolio-hover ">
+                            <img src="assets/images/portfolio/voicingtheWhispers.jpg" alt="Img">
+                            <a href="Event - Voicing the Whispers.html" class="portfolio-hover ">
                                 <div class="hover-content">
                                     <i class="far fa-external-link"></i>
                                 </div>
                             </a>
                         </div>
                         <div class="text">
-                            <h3 class="title"><a href="Event - Voicing the whispers.html">Voicing the Whispers</a></h3>
+                            <h3 class="title"><a href="Event - Voicing the Whispers.html">Voicing the Whispers</a></h3>
                             <a class="cat-link">06/03/2022</a>
                         </div>
                     </div>
