--- a/Event - Addiction prevention.html
+++ b/Event - Addiction prevention.html
@@ -261,7 +261,7 @@
                                         <img src="assets/images/portfolio/akshayapatra.jpg" alt=""></a>
                                     </div>
                                     <div class="text">
-                                        <h4><a href="Event - Akshaya Patra.html">Akshaya Patra</a></h4>
+                                        <h4><a href="Event - Akshaya Patra.html">Akshaya Patra 2.0</a></h4>
                                         <p>November 2022</p>
                                     </div>
                                 </div>
