--- a/reg.html
+++ b/reg.html
@@ -130,12 +130,12 @@
         <!--====== End Page-banner section ======-->
 
         <!--====== Start Team Section ======-->
-        <section class="team-area team-area-v3 light-gray-bg pt-130 pb-90 position-relative z-1">
+        <section class="team-area team-area-v3 light-gray-bg pt-30 pb-30 position-relative z-1">
             <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-7.png" alt=""></span></div>
             <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-12.png" alt=""></span></div>
             <div class="shape shape-three scene"><span data-depth="2.5"><img src="assets/images/shape/shape-8.png" alt=""></span></div>
             <div class="container">
-                <div class="row justify-content-center">
+                <!-- <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section-title text-center mb-55 wow fadeInUp">
                             
@@ -143,20 +143,24 @@
                             <p>Make sure to not miss out any of our events!</p>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-5 col-md-6 col-sm-12 mx-auto">
-                        <div class="team-item mb-55 wow fadeInUp mx-auto" data-wow-delay=".10s">
-                            <div class="img-holder">
-                                <a href="https://bit.ly/yuvamembership23">
-                                <img src="assets/images/Registration/membership23.png " alt="">
-                            </a>
-                            </div>
+                </div> -->
+                <div id="register" class="row">
+                    <div class="col-lg-6 col-md-6 col-sm-12 mx-auto">
+                        <div id="register" class="team-item mb-55 wow fadeInUp mx-auto" data-wow-delay=".10s">
                             <div class="text text-center">
-                               
-                                <h4><br><a href="https://bit.ly/yuvamembership23">Membership Drive 2023-24</a></h4>
-                                <p class="position">Register Now</p>
+                                <h4>Membership Drive 2023-24</h4>
+                                <p class="position">Register Now ⬇</p>
                             </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center mb-50">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSem9qWNLHoNxSqUpyojjS8jQ8ObrawStfZ2_HTmC_Ag7O9_KA/viewform?embedded=true" width="700" height="1040" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="section-title text-center mb-55 wow fadeInUp">
+                            <h2>Our Past Events</h2>
                         </div>
                     </div>
                 </div>
