--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                         <h2><span class="sub-title">Become a Member - Join us today!<br><br></span></h2><!--<span class="fill-text"></span>-->
                                         <h2 align="left"><span class="fill-text">Join </span> YUVA <span class="fill-text"> and Experience the </span> Power of Community! </h2>
                                     </div>
-                                    <a href="https://forms.gle/PcYWLiEj1YgZ5VS26" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
+                                    <a href="reg.html#register" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
                                 </div>
                             </div>
                         </div>
@@ -216,7 +216,7 @@
                                         <h2><span class="fill-text">Join us in </span> being the change <span class="fill-text">you want to </span> see.</h2>
                                         <h4 class="sub-title">Enroll for our Membership !</h4>
                                     </div>
-                                    <a href="https://forms.gle/PcYWLiEj1YgZ5VS26" class="main-btn bordered-btn btn-white arrow-btn">Register</a>
+                                    <a href="reg.html#register" class="main-btn bordered-btn btn-white arrow-btn">Register</a>
                                 </div>
                             </div>
                         </div>
