index page updated

--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@
                                 <i class="flaticon-technical-support"></i>
                             </div>
                             <div class="text">
-                                <h2 class="number"><span>6</span>+</h2>
+                                <h2 class="number" ><span class="count">6</span>+</h2>
                                 <p>Years of Impacting Lives</p>
                             </div>
                         </div>
@@ -994,7 +994,7 @@
                                 <i class="flaticon-medal"></i>
                             </div>
                             <div class="text">
-                                <h2 class="number"><span>17</span>+</h2>
+                                <h2 class="number"><span class="count">17</span>+</h2>
                                 <p>Awards & Recognitions</p><br>
                             </div>
                         </div>
@@ -1005,7 +1005,7 @@
                                 <i class="flaticon-start-up"></i>
                             </div>
                             <div class="text">
-                                <h2 class="number"><span>65</span>+</h2>
+                                <h2 class="number"><span class="count">65</span>+</h2>
                                 <p>Successful Endeavors</p><br>
                             </div>
                         </div>
@@ -1016,7 +1016,7 @@
                                 <i class="flaticon-creativity"></i>
                             </div>
                             <div class="text">
-                                <h2 class="number"><span>700</span>+</h2>
+                                <h2 class="number"><span class="count">700</span>+</h2>
                                 <p>Hands on Board</p><br>
                             </div>
                         </div>
