--- a/index.html
+++ b/index.html
@@ -260,16 +260,16 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
-                                <img src="assets\images\portfolio\lumos23.jpg" alt="Img">
-                                <a href="Event - Yuvaneta23.html" class="portfolio-hover">
+                                <img src="assets\images\portfolio\lumos .jpg" alt="Img">
+                                <a href="Event - Lumos.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Yuvaneta23.html">Yuvaneta '23</a></h3>
-                                <a class="cat-link">26/09/2023</a>
+                                <h3 class="title"><a href="Event - Lumos.html">Lumos</a></h3>
+                                <a class="cat-link">23/10/2023</a>
                             </div>
                         </div>
                     </div>
