--- a/Event - Lumos.html
+++ b/Event - Lumos.html
@@ -166,8 +166,8 @@
                                 <img src="assets/images/icon/icon-7.png" alt="">
                             </div>
                             <div class="text">
-                                <h4>Date</h4>
-                                <p>20-10-2023</p>
+                                <h4>Vertical</h4>
+                                <p>Masoom</p>
                             </div>
                         </div>
                     </div>
@@ -178,8 +178,8 @@
                                 <img src="assets/images/icon/icon-9.png" alt="">
                             </div>
                             <div class="text">
-                                <h4>Time</h4>
-                                <p>2:00 PM - 5:00 PM</p>
+                                <h4>Target Audience</h4>
+                                <p>Young Children</p>
                             </div>
                         </div>
                     </div>
@@ -189,8 +189,8 @@
                                 <img src="assets/images/icon/icon-8.png" alt="">
                             </div>
                             <div class="text">
-                                <h4>Venue</h4>
-                                <p>Jeevitham Trust , Nungabakkam</p>
+                                <h4>Cause</h4>
+                                <p>Letting the kids know that they are valued and cherished</p>
                             </div>
                         </div>
                     </div>
@@ -334,7 +334,7 @@
                                         <img src="assets/images/portfolio/yuvaneta23.jpg" alt=""></a>
                                     </div>
                                     <div class="text">
-                                        <h4><a href="Event - Yuvaneta23.html">yuvaneta23</a></h4>
+                                        <h4><a href="Event - Yuvaneta23.html">Yuvaneta'23</a></h4>
                                         <p>September 2023</p>
                                     </div>
                                 </div>
