--- a/index.html
+++ b/index.html
@@ -257,7 +257,23 @@
                     </div>
                 </div>
                 <div class="row portfolio-grid">
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-1">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="img-holder">
+                                <img src="assets\images\portfolio\build and connect.jpg" alt="Img">
+                                <a href="Event - Build And Connect.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Build And Connect.html">Build And Connect</a></h3>
+                                <a class="cat-link">27/10/2023</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-1">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
                                 <img src="assets\images\portfolio\instolutions 2.0.jpeg" alt="Img">
@@ -273,7 +289,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
                                 <img src="assets\images\portfolio\lumos .jpg" alt="Img">
