--- a/Event - Instolutions 2.0.html
+++ b/Event - Instolutions 2.0.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!--====== Title ======-->
-        <title>YUVA REC Yuvaneta'23</title>
+        <title>YUVA REC Insolutions 2.0</title>
         <!--====== Favicon Icon ======-->
         <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/png">
         <!--====== Default css ======-->
