--- a/Event - Instolutions 2.0.html
+++ b/Event - Instolutions 2.0.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!--====== Title ======-->
-        <title>YUVA REC Insolutions 2.0</title>
+        <title>YUVA REC Instolutions 2.0</title>
         <!--====== Favicon Icon ======-->
         <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/png">
         <!--====== Default css ======-->
@@ -146,8 +146,8 @@
                                 <div class="text">
                                     <h3 class="title">Instolutions 2.0</h3>
                                     <p class="position">26 October 2023</p>
-                                    <p  align="justify">The "Insolutions 2.0", hosted at Alpha Engineering college,Thirumazhisai was a brainstorming real time problem solving event, held between 9 am to 1:30 pm, For the forenoon session an informative workshop was conducted on “Design Thinking and the steps to approach it”. After that students from various colleges were introduced into different teams, each company was provided with a war room which resulted in 6 such rooms, teams in those rooms were met with different problem statements to baffle their minds . One of the main motto of this event was to achieve “Dual Beneficiary” in which both the students and the companies who participated got benefited in their own ways. As for companies, they got the solution for their problem statements and the students gained the knowledge on “the approach of problem solving using Design thinking”. It was proud to say that all the 6 teams that won the competition had our YIYUVA REC members and were honored by Chief Guest  Srivas Anantharaman Chennai Chapter Co-chair (Yi Chennai) also 
-                                        Guest Speaker  Vinayakram Krishnakumar Innovation co-chair (Yi Chennai). The insolutions 2.0 paved the way for our members to face the real time challenges and the knowledge on how to find a solution for those challenges.</p>
+                                    <p  align="justify">The <b>Instolutions 2.0</b>, hosted at Alpha Engineering College, Thirumazhisai was a brainstorming real time problem solving event, held between 9 am to 1:30 pm, For the forenoon session an informative workshop was conducted on “Design Thinking and the steps to approach it”. After that students from various colleges were introduced into different teams, each company was provided with a war room which resulted in 6 such rooms, teams in those rooms were met with different problem statements to baffle their minds . One of the main motto of this event was to achieve “Dual Beneficiary” in which both the students and the companies who participated got benefited in their own ways. As for companies, they got the solution for their problem statements and the students gained the knowledge on “the approach of problem solving using Design thinking”. It was proud to say that all the 6 teams that won the competition had our YIYUVA REC members and were honored by Chief Guest  Srivas Anantharaman Chennai Chapter Co-chair (Yi Chennai) also 
+                                        Guest Speaker Vinayakram Krishnakumar, Innovation Co-chair (Yi Chennai). Instolutions 2.0 paved the way for our members to face the real time challenges and the knowledge on how to find a solution for those challenges.</p>
                                 </div>
                             </div>
                         </div>
