--- a/Event - Build And Connect.html
+++ b/Event - Build And Connect.html
@@ -136,7 +136,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="img-holder mb-50 position-relative z-1 wow fadeInLeft">
-                                <img src="assets/images/team/pawsitivity 1.0.jpg"  alt="">
+                                <img src="assets/images/team/build and connect(1).jpeg"  alt="">
                                 <div class="shape shape-one"><span><img src="assets/images/shape/shape-5.png" alt=""></span></div>
                             </div>
                         </div>
@@ -167,8 +167,8 @@
                                 <img src="assets/images/icon/icon-7.png" alt="">
                             </div>
                             <div class="text">
-                                <h4>Date</h4>
-                                <p>27-10-2023</p>
+                                <h4>Vertical</h4>
+                                <p>Entrepreneurship & Innovation</p>
                             </div>
                         </div>
                     </div>
@@ -179,8 +179,8 @@
                                 <img src="assets/images/icon/icon-9.png" alt="">
                             </div>
                             <div class="text">
-                                <h4>Time</h4>
-                                <p>10:00 PM - 12:00 PM</p>
+                                <h4>Target Audience</h4>
+                                <p>College Students</p>
                             </div>
                         </div>
                     </div>
@@ -190,8 +190,8 @@
                                 <img src="assets/images/icon/icon-8.png" alt="">
                             </div>
                             <div class="text">
-                                <h4>Venue</h4>
-                                <p>Conference Hall</p>
+                                <h4>Cause</h4>
+                                <p>Empowering college students to shape their LinkedIn narrative</p>
                             </div>
                         </div>
                     </div>
