--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-1">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
-                                <img src="assets\images\portfolio\build and connect.jpg" alt="Img">
+                                <img src="assets\images\portfolio\Akshaya patra 3.0.jpg" alt="Img">
                                 <a href="Event - Akshaya Patra3.0.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
