Update Event - Akshaya Patra3.0.html

--- a/Event - Akshaya Patra3.0.html
+++ b/Event - Akshaya Patra3.0.html
@@ -307,7 +307,7 @@
                                         <img src="assets/images/portfolio/build and connect.jpg" alt="Img"></a>
                                     </div>
                                     <div class="text">
-                                        <h4><a href="Event - Build And Connect.html">Build and Connenct</a></h4>
+                                        <h4><a href="Event - Build And Connect.html">Build and Connect</a></h4>
                                         <p>October 2023</p>
                                     </div>
                                 </div>
