--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Akshaya Patra3.0.html">Akshya patra3.0</a></h3>
+                                <h3 class="title"><a href="Event - Akshaya Patra3.0.html">Akshya Patra3.0</a></h3>
                                 <a class="cat-link">05/11/2023</a>
                             </div>
                         </div>
