--- a/Initiatives.html
+++ b/Initiatives.html
@@ -165,6 +165,22 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-1">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
+                                <img src="assets\images\portfolio\Akshaya patra 3.0.jpg" alt="Img">
+                                <a href="Event - Akshaya Patra3.0.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Akshaya Patra3.0.html">Akshaya Patra3.0</a></h3>
+                                <a class="cat-link">05/11/2023</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-1">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="img-holder">
                                 <img src="assets\images\portfolio\build and connect.jpg" alt="Img">
                                 <a href="Event - Build And Connect.html" class="portfolio-hover">
                                     <div class="hover-content">
