Akshaya Patra video

--- a/Event - Akshaya Patra3.0.html
+++ b/Event - Akshaya Patra3.0.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!--====== Title ======-->
-        <title>YUVA REC Akshaya Patra3.0</title>
+        <title>YUVA REC Akshaya Patra 3.0</title>
         <!--====== Favicon Icon ======-->
         <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/png">
         <!--====== Default css ======-->
@@ -168,7 +168,7 @@
                             </div>
                             <div class="text">
                                 <h4>Vertical</h4>
-                                <p>Rural Initiatives</p>
+                                <p>Rural Initiative</p>
                             </div>
                         </div>
                     </div>
