--- a/Achievements and recognitions.html
+++ b/Achievements and recognitions.html
@@ -17,6 +17,42 @@
         <!--====== Responsive css ======-->
         <link rel="stylesheet" href="assets/css/responsive.css">
     </head>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        #overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+        }
+
+        #popup {
+            overflow-y: auto;
+            z-index:999999;
+            display: none;
+            position: fixed;
+            width: 80%;
+            height: 80%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .popup-image {
+
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
     <body>
         <!--====== Start Preloader ======-->
         <!--<div class="preloader">
