--- a/team.html
+++ b/team.html
@@ -34,7 +34,7 @@
 
         #popup {
             overflow-y: auto;
-            z-index:9999;
+            z-index:999999;
             display: none;
             position: fixed;
             width: 80%;
@@ -88,8 +88,8 @@
                 </li>
                 <li>
                     <i class="fal fa-phone"></i>
-                    <a href="tel:9025794684">Madhuvanti - +91 9025794684</a>
-                    <a href="tel:8667060010">Richard - +91 8667060010</a>
+                    <a href="tel:8667060010">Richard - 86670 60010</a>
+                    <a href="tel:6385486230">Siva Santhosh - 63854 86230</a>
                 </li>
             </ul>
         </div>
@@ -887,7 +887,7 @@
                         </div> -->
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".45s">
-                                <div class="">
+                                <div class="img-holder">
                                     <img src="assets/images/team/madhuvantichair.png" alt="" id="triggerImage" onclick="openPopup()">
                                     <div id="overlay"></div>
                                     <div id="popup" >
