--- a/AnnualReport23.html
+++ b/AnnualReport23.html
@@ -73,7 +73,7 @@
 
     @media only screen and (max-width: 600px) {
       #sidebar {
-        width: 0;
+        width: -50px;
       }
 
       #canvas {
@@ -101,7 +101,7 @@
     <div class="site-branding">
       <a href="index.html" class="brand-logo"><img src="assets/images/logo/logo-1.png" alt="Site Logo"></a>
   </div>
-    <nav class="inside main-menu">
+    <nav class="inside">
       <p align="justify"><b>INDEX</b></p>
     <ul>
       <li><a href="#page/1">Front Cover</a></li>
