--- a/Initiatives.html
+++ b/Initiatives.html
@@ -164,6 +164,22 @@
                     </div>
                 </div>
                 <div class="row portfolio-grid">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="img-holder">
+                                <img src="assets\images\portfolio\yia23.jpeg" alt="Img">
+                                <a href="Event - Yi Chennai Annual Day 2023.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Yi Chennai Annual Day 2023.html">Yi Annual Day 2023</a></h3>
+                                <a class="cat-link">07/12/2023</a>
+                            </div>
+                        </div>
+                    </div>
                      <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-4 cat-10">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                             <div class="img-holder video-container">
