--- a/Event - Yi Chennai Annual Day 2023.html
+++ b/Event - Yi Chennai Annual Day 2023.html
@@ -179,8 +179,8 @@
                                 <img src="assets/images/icon/icon-9.png" alt="">
                             </div>
                             <div class="text">
-                                <h4>Special Day For</h4>
-                                <p>Yi Members</p>
+                                <h4>Time</h4>
+                                <p>5:30pm-9:00pm</p>
                             </div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                             </div>
                             <div class="text">
                                 <h4>Venue</h4>
-                                <p>T.Nagar</p>
+                                <p> GRT Hotels T.Nagar</p>
                             </div>
                         </div>
                     </div>
@@ -211,7 +211,7 @@
                 </div>
                 <div class="row">
                     
-                    <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
                                 <img src="assets/images/Events/Yi Annual Day 2023/21.jpeg" alt="">
@@ -219,7 +219,7 @@
                             
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".20s">
                             <div class="img-holder">
                                 <img src="assets/images/Events/Yi Annual Day 2023/2.jpeg" alt="">
