--- a/Gallery.html
+++ b/Gallery.html
@@ -135,16 +135,16 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Yi Annual Day 2023/9.jpeg" alt="">
-                                <a href="assets/images/Events/Yi Annual Day 2023/9.jpeg" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/Yi Annual Day 2023/91.jpeg" alt="">
+                                <a href="assets/images/Events/Yi Annual Day 2023/91.jpeg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
-                    <<div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/lumos/1.jpg" alt="">
-                                <a href="assets/images/Events/lumos/1.jpg" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/lumos/8.jpg" alt="">
+                                <a href="assets/images/Events/lumos/8.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
@@ -153,6 +153,14 @@
                             <div class="img-holder">
                                 <img src="assets/images/Events/Instolutions 2.0/18.jpeg" alt="">
                                 <a href="assets/images/Events/Instolutions 2.0/18.jpeg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/lumos/3.jpg" alt="">
+                                <a href="assets/images/Events/lumos/3.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
