--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="page-banner-img">
-                            <img src="assets/images/about/img-3.jpg" alt="">
+                            <img src="assets/images/about/img-8.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                     <div class="col-lg-6">
                         <div class="img-holder-box mb-50">
                             <div class=" wow fadeInLeft">
-                            <img style="border-radius:1%" src="assets/images/about/about-4.png" alt="">
+                            <img style="border-radius:1%" src="assets/images/about/img-9.jpg" alt="">
                         </div>
                     </div></div>
                     <div class="col-lg-6">
