--- a/reg.html
+++ b/reg.html
@@ -148,14 +148,14 @@
                     <div class="col-lg-6 col-md-6 col-sm-12 mx-auto">
                         <div id="register" class="team-item mb-55 wow fadeInUp mx-auto" data-wow-delay=".10s">
                             <div class="text text-center">
-                                <h4>Membership Drive 2023-24</h4>
+                                <h4>SMASH 2.0</h4>
                                 <p class="position">Register Now ⬇</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="row justify-content-center mb-50">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSem9qWNLHoNxSqUpyojjS8jQ8ObrawStfZ2_HTmC_Ag7O9_KA/viewform?embedded=true" width="700" height="1040" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMncmMN9FCto760u8-p8riNaz4SH4AekE72dG_ITt2IrYjCQ/viewform?embedded=true" width="700" height="1040" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
