--- a/reg.html
+++ b/reg.html
@@ -168,6 +168,20 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
                             <div class="img-holder">
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSem9qWNLHoNxSqUpyojjS8jQ8ObrawStfZ2_HTmC_Ag7O9_KA/viewform?embedded">
+                                <img src="assets/images/Registration/membership23.png " alt="">
+                            </a>
+                            </div>
+                            <div class="text text-center">
+                               
+                                <h4><br><a href="https://docs.google.com/forms/d/e/1FAIpQLSem9qWNLHoNxSqUpyojjS8jQ8ObrawStfZ2_HTmC_Ag7O9_KA/viewform?embedded">Membership 2023-24</a></h4>
+                                <p class="position">from 07/10/2023</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
+                            <div class="img-holder">
                                 <a href="https://forms.gle/m3fJEE6bpYDBJvBe8">
                                 <img src="assets/images/Registration/Yuvaneta23.png " alt="">
                             </a>
