--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
                             <div class="col-xl-6 col-lg-6 mt-35">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-55">
-                                        <h2><span class="sub-title">Become a Member - Join us today!<br><br></span></h2><!--<span class="fill-text"></span>-->
-                                        <h2 align="left"><span class="fill-text">Join </span> YUVA <span class="fill-text"> and Experience the </span> Power of Community! </h2>
+                                        <h2><span class="sub-title">SMASH 2.0<br><br></span></h2><!--<span class="fill-text"></span>-->
+                                        <h2 align="left"><span class="fill-text">Smash it up for charity!</span>Your game,Their gain - <span class="fill-text"> Register Now </span> And Let your smashes make an Impact </h2>
                                     </div>
-                                    <a href="reg.html#register" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScMncmMN9FCto760u8-p8riNaz4SH4AekE72dG_ITt2IrYjCQ/viewform" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
                                 </div>
                             </div>
                         </div>
