--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             </div> -->
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one">
                                 <div class="img-holder">
-                                    <img src="assets\images\Registration\membership23.png" alt=""><a href="assets\images\Registration\membership23.png" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
+                                    <img src="assets\images\Registration\Smash 2.0.jpg" alt=""><a href="assets\images\Registration\Smash 2.0.jpg" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 mt-35">
