--- a/team.html
+++ b/team.html
@@ -1987,7 +1987,7 @@
                 document.getElementById("overlay1").style.display = "none";
                 document.getElementById("popup1").style.display = "none";
                 document.getElementById("footer-area").style.display = "none";
-                document.getElementById("header-area").style.display="none";
+                document.getElementById("header-area").style.display="block";
                 document.removeEventListener('click', closePopupOutside1);
                 document.body.style.overflow = 'auto';
             }
@@ -2015,7 +2015,7 @@
             function closePopup2() {
                 document.getElementById("overlay2").style.display = "none";
                 document.getElementById("popup2").style.display = "none";
-                document.getElementById("header-area").style.display="none";
+                document.getElementById("header-area").style.display="block";
                 document.removeEventListener('click', closePopupOutside2);
                 document.body.style.overflow = 'auto';
             }
@@ -2044,7 +2044,7 @@
                 document.getElementById("overlay3").style.display = "none";
                 document.getElementById("popup3").style.display = "none";
                 document.getElementById("footer-area").style.display = "none";
-                document.getElementById("header-area").style.display="none";
+                document.getElementById("header-area").style.display="block";
                 document.removeEventListener('click', closePopupOutside3);
                 document.body.style.overflow = 'hidden';
             }
