--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
                                     <img src="assets\images\Registration\Smash 2.0.jpg" alt=""><a href="assets\images\Registration\Smash 2.0.jpg" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-lg-6 mt-35">
+                            <div class="col-xl-6 col-lg-6">
                                 <div class="text-wrapper wow fadeInUp ml-15">
-                                    <div class="section-title section-title-white mb-55">
+                                    <div class="section-title section-title-white mb-5">
                                         <h2><span class="sub-title">SMASH 2.0<br><br></span></h2><!--<span class="fill-text"></span>-->
-                                        <h2 align="left"><span class="fill-text">Smash it up for charity!</span>Your game,Their gain - <span class="fill-text"> Register Now </span> And Let your smashes make an Impact </h2>
+                                        <h2 align="left"><span class="fill-text">Smash it up for charity!</span>Your game, Their gain - <span class="fill-text"> Register Now </span> And Let your smashes make an Impact </h2>
                                     </div>
                                     <a href="https://docs.google.com/forms/d/e/1FAIpQLScMncmMN9FCto760u8-p8riNaz4SH4AekE72dG_ITt2IrYjCQ/viewform" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
                                 </div>
